adds class to button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>yoink</h1>
     <h2>yiddle</h2>
     <h3>yip</h3>
-    <button>bonkbutton</button>
+    <button class="btn">bonkbutton</button>
     <img src="https://i.kym-cdn.com/photos/images/original/001/622/311/0a2.jpg" alt="bonk">
     <h4>yik</h4>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint neque nesciunt odio impedit fuga molestias quis officiis quasi incidunt explicabo beatae libero, ratione iure vel atque? Ducimus quo excepturi assumenda?</p>
