--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>yoink</h1>
-    <h2>yiddle</h2>
-    <h3>yip</h3>
     <button class="btn">bonkbutton</button>
-    <img src="https://i.kym-cdn.com/photos/images/original/001/622/311/0a2.jpg" alt="bonk">
-    <h4>yik</h4>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint neque nesciunt odio impedit fuga molestias quis officiis quasi incidunt explicabo beatae libero, ratione iure vel atque? Ducimus quo excepturi assumenda?</p>
+    <audio id="bonksound">
+        <source src="bonk_BEtiM8g.mp3" type="audio/mpeg">
+    </audio>
+    <img class="bonkimg" src="https://i.kym-cdn.com/photos/images/original/001/622/311/0a2.jpg" alt="bonk">
 </body>
 </html>
